@@ -23,26 +23,22 @@
 #include <qore/Qore.h>
 #include <qore/intern/DeleteStatement.h>
 
-DeleteStatement::DeleteStatement(int start_line, int end_line, AbstractQoreNode *v) : AbstractStatement(start_line, end_line)
-{
+DeleteStatement::DeleteStatement(int start_line, int end_line, AbstractQoreNode *v) : AbstractStatement(start_line, end_line) {
    var = v;
 }
 
-DeleteStatement::~DeleteStatement()
-{
+DeleteStatement::~DeleteStatement() {
    // this should never be 0, but in case the implementation changes...
    if (var)
       var->deref(0);
 }
 
-int DeleteStatement::execImpl(AbstractQoreNode **return_value, ExceptionSink *xsink)
-{
+int DeleteStatement::execImpl(AbstractQoreNode **return_value, ExceptionSink *xsink) {
    delete_var_node(var, xsink);
    return 0;
 }
 
-int DeleteStatement::parseInitImpl(LocalVar *oflag, int pflag)
-{
+int DeleteStatement::parseInitImpl(LocalVar *oflag, int pflag) {
    return process_node(&var, oflag, pflag);
 }
 
