@@ -1,6 +1,8 @@
 2009.06.23: David Nichols
 	* always check current directory of script first when looking for
 	  %include files i the path is not absolute
+	* fixed a deadlock when an object deletes a member and the member
+	  tries to access the parent object in the member's destructor
 
 2009.06.22: David Nichols
 	* added checks to the scanner to give better error messages when
